@@ -90,6 +90,12 @@ atSignTip "INSERT '@' SIGN (INTL KEYBOARDS)"
 
 
 loginButton "LOGIN"
+loginNoSaveButton "TEMP LOGIN"
+
+saveTip "LOGIN AND STORE DETAILS LOCALLY"
+noSaveTip "DO NOT STORE DETAILS LOCALLY"
+
+
 accountKey "KEY"
 paste "PASTE"
 
